Fix overflow problem

--- a/v202503/public/style.css
+++ b/v202503/public/style.css
@@ -367,9 +367,7 @@ h4 {
     object-fit: contain;
     opacity: 1.;
     background-color: rgba(255, 255, 255, 0.75);
-    border-radius: 50%;
-    box-shadow: 0 0 30px 20px rgba(255, 255, 255, 0.75);
-    overflow: visible;
+    box-shadow: 0 0 20px 20px rgba(255, 255, 255, 0.75);
 }
 
 @media (min-width: 1024px) and (pointer: fine)  {
